# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/kuvat/: Untitled Diagram.drawio
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: .coverage
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti_sekvenssikaavio.md  monopoli_Luokkakaavio.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: pef.py  pef_monitoring.py  user.py
src/repositories/: pef_monitorin_repository.py  pef_repository.py  user_repository.py
src/services/: pef_service.py
src/tests/repositories/: pef_monitorin_repository_test.py  pef_repository_test.py  user_repository_test.py
src/tests/services/: pef_service_test.py
src/ui/: create_user_view.py  login_view.py  pef_view.py  ui.py
